package hiof.gr19.seat.model;

public class User {
    public enum Type{
        Customer,
        Organizer,
        TicketChecker
    }
}
